fix: adjust opacity of horizontal rule in browse summary for better visibility

--- a/src/encoded/static/scss/encoded/modules/_search.scss
+++ b/src/encoded/static/scss/encoded/modules/_search.scss
@@ -1250,6 +1250,7 @@ div.browse-summary {
 		hr {
 			margin: 1rem 0 0.25rem -1.25rem;
 			width: calc(100% + 2.5rem);
+			opacity: 0.75 !important;
 		}
 	}
 
